test/negative/betweenand01.cfr
// Test for negative between and constraint

a
 b ?
  c ?
  d ?
  e ?
  [ between d and e ]

// Rao: 08-08-2014: Failed as expected, but it should be checked again as
// parser failing to parse even postive testcases for between and

